ADnD_1E_Revised/src/1ESheet.css
/* ... */
.charsheet .logo-box .two-columns {
  align-content: end;
  min-width: 18em;
}

.charsheet .logo-box .two-columns label {
  justify-content: center;
  margin: 0 0 1em 0;
  max-width: none;
  min-width: 0;
  width: 50%;
}

.charsheet .logo-box .normalmode,
.charsheet .logo-box .darkmode {
  background-image: url(https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/ADnD_1E/images/logo.png);
  background-position: 50% 0;
  background-repeat: no-repeat;
  background-size: contain;
  height: 8em;
  opacity: 0.9;
  width: calc(100% - 25px);
}

.charsheet .logo-box .darkmode {
  display: none;
}

/* darkmode */
.sheet-darkmode .tab-content .charsheet .logo-box .darkmode {
  background-image: url(https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/ADnD_1E/images/logo_inverted.png);
  display: block;
  opacity: 0.8;
}

.sheet-darkmode .tab-content .charsheet .logo-box .normalmode {
  display: none;
}

.charsheet .portrait-box {
  align-content: center;
  display: flex;
  grid-column: 3/4;
  grid-row-start: 1;
  position: absolute;
  width: 100%;
}

/* sheet is set to no image */
.charsheet .portrait-box:has(input[type='hidden'].toggle-avatar[value="2"]),
.charsheet .wrapper .npc-box.statblock3:has(.toggle-avatar[value="2"]) {
  display: none;
}

/* sheet image avatar or url toggle */
.charsheet .image-avatar img {
  display: none;
}

/* hides the ghosted outline when no avatar has been selected yet */
.charsheet input[type='hidden'].toggle-avatar[value="1"] ~ .image-avatar img,
.charsheet input[type='hidden'].toggle-avatar[value="2"] ~ .image-avatar img {
  display: none;
}

.charsheet input[type='hidden'].toggle-avatar[value="1"] ~ .image-avatar img[src] {
  display: inherit;
}

/* needs important to override inline style added by roll20 */
.charsheet input[type='hidden'].toggle-avatar[value="1"] ~ .image-avatar,
.charsheet input[type='hidden'].toggle-avatar[value="2"] ~ .image-avatar {
  background-image: none !important;
  min-width: auto;
}

.charsheet .image-avatar {
  align-items: center;
  background-color: transparent;
  background-position: center;
  background-repeat: no-repeat;
  background-size: contain;
  box-sizing: content-box;
  display: flex;
  flex-grow: 1;
  height: 200px;
  justify-content: center;
  margin: 0 0.5em 0 0.5em;
  max-width: 200px;
  overflow: hidden;
  padding-left: 10px;
  position: relative;
  right: -10px;
  width: fit-content;
}

/* breakpoint behavior for sheet portrait */

/* img url is a background image which is not detected by the grid
 this prevents collapsing the 3rd column when using an image */
.charsheet .header-box:has(.image-avatar:checked[style*='http']),
.charsheet .header-box:has(.toggle-avatar[value="1"] + .image-avatar img),
.charsheet .header-box:has(.toggle-avatar[value="2"] + .image-avatar img) {
  grid-template-columns: 1fr 1.5fr auto;
  overflow: hidden;
}

.charsheet .header-box:has(.image-avatar[style*='http']),
.charsheet .header-box:has(.toggle-avatar[value="1"] + .image-avatar img[src]) {
  grid-template-columns: 1fr 1.5fr 1fr;
  position: relative;
}

.charsheet .background,
.charsheet .header-box,
.charsheet .logo-box,
.charsheet .image-avatar,
.charsheet .portrait-box {
  container-type: inline-size;
}

@container (max-width: 281px) {

  .charsheet .background .wrapper .header-box:has(.image-avatar[style*='http']) .logo-box .ac-columns,
  .charsheet .background .wrapper .header-box:has(.toggle-avatar[value="1"] + .image-avatar img[src]) .logo-box .ac-columns {
    align-self: baseline;
    flex-direction: row;
    margin: 4.1em -4.5em 0 0;
    width: 100%;
  }

  .charsheet .background .wrapper .header-box:has(.image-avatar[style*='http']) .logo-box .ac-columns label:nth-child(2),
  .charsheet .background .wrapper .header-box:has(.toggle-avatar[value="1"] + .image-avatar img[src]) .logo-box .ac-columns label:nth-child(2) {
    margin-left: 5px;
  }

  .charsheet .background .wrapper .header-box:has(.image-avatar[style*='http']) .logo-box .ac-columns label:last-child,
  .charsheet .background .wrapper .header-box:has(.toggle-avatar[value="1"] + .image-avatar img[src]) .logo-box .ac-columns label:last-child {
    margin-left: 8px;
  }
}

@container (max-width: 686px) {
  .charsheet .background .wrapper .header-box .portrait-box {
    display: block;
    max-height: var(--portrait-min-xy);
    min-height: var(--portrait-min-xy);
    right: clamp(28px, 3.95vw, 3.95vw);
    top: 0;
  }
}

/* works for avatar image */
@container (max-width: 188px) {
  .charsheet .background .wrapper .header-box .portrait-box .image-avatar {
    margin: auto;
    max-height: var(--portrait-min-xy);
    min-width: var(--portrait-min-xy);
    overflow: visible;
  }
}

/* applies the same breakpoint behavior for url image */
@container (max-width: 166px) {
  .charsheet .wrapper .portrait-box .image-avatar img {
    height: var(--portrait-min-xy);
    min-width: var(--portrait-min-xy);
  }
}
/* ... */

